--- a/www/momenane.html
+++ b/www/momenane.html
@@ -142,18 +142,18 @@ ul.big_list {
 				<div id="container">
 					<div id="main" class="">
 						<ul class="big_list" style="direction:rtl;">
-							<li onclick='playAudio_new("audio/salame.mp3");' >عظمت مقام حضرت زینب سلام الله علیها</li>
-							<li onclick='playAudio_new("audio/besmella.mp3");' >زیارت اربعین، خلاصه نهضت حسینی</li>
-							<li onclick='playAudio_new("audio/salame.mp3");' >اربعین احیاگر شهادت</li>
-							<li onclick='playAudio_new("audio/besmella.mp3");' >اربعین یک آغاز بود</li>
-							<li onclick='playAudio_new("audio/salame.mp3");' >اولین شکوفه‌های عاشورایی در اربعین</li>
-							<li onclick='playAudio_new("audio/besmella.mp3");' >درسی که اربعین به ما میدهد</li>
+							<li onclick='playAudio_new("audio/momenane/01.mp3");' >عظمت مقام حضرت زینب سلام الله علیها</li>
+							<li onclick='playAudio_new("audio/momenane/02.mp3");' >زیارت اربعین، خلاصه نهضت حسینی</li>
+							<li onclick='playAudio_new("audio/momenane/03.mp3");' >اربعین احیاگر شهادت</li>
+							<li onclick='playAudio_new("audio/momenane/04.mp3");' >اربعین یک آغاز بود</li>
+							<li onclick='playAudio_new("audio/momenane/05.mp3");' >اولین شکوفه‌های عاشورایی در اربعین</li>
+							<li onclick='playAudio_new("audio/momenane/06.mp3");' >درسی که اربعین به ما میدهد</li>
 							
 							<li onclick="window.location.href='momenane_1th.html';" >اگر ما با هم باشیم (متن)</li>
 							<li onclick="window.location.href='momenane_2th.html';" >فضیلت مردم عراق (متن)</li>
 							<li onclick="window.location.href='momenane_3th.html';" >شور و شعور حسینی (متن)</li>
 
-							<li onclick='playAudio_new("audio/salame.mp3");' >ارتباطات با برادران دینیتان را احیا کنید</li>
+							<li onclick='playAudio_new("audio/momenane/07.mp3");' >ارتباطات با برادران دینیتان را احیا کنید</li>
 						</ul>
 
 					</div>
