--- a/www/adab_ahkam.html
+++ b/www/adab_ahkam.html
@@ -139,19 +139,20 @@
 				</div>
 			</div>
 			<div id="container" >
-			<div id="main" >
-			
-				<ul class="zirmenu">
-					<li><a href="adabe-safar.html">آداب سفر</a></li>
-					<li><a href="adabe-ziyarat.html">آداب زیارات</a></li>
-					<li><a href="adabe-ziyarat-imam-husein.html">آداب زیارت سید الشهداء</a></li>
-					<li><a href="ahkame-safare-ziyarati.html">احکام سفرهای زیارتی</a></li>
-					<li><a href="ahkame-ziyarate-niyabati.html">احکام زیارت نیابتی</a></li>
-					<li><a href="ahkame-azadari.html">احکام عزاداری</a></li>
-				</ul>
+				<div id="main" >
+				
+					<ul class="zirmenu">
+						<li><a href="adabe-safar.html">آداب سفر</a></li>
+						<li><a href="adabe-ziyarat.html">آداب زیارات</a></li>
+						<li><a href="adabe-ziyarat-imam-husein.html">آداب زیارت سید الشهداء</a></li>
+						<li><a href="ahkame-safare-ziyarati.html">احکام سفرهای زیارتی</a></li>
+						<li><a href="ahkame-ziyarate-niyabati.html">احکام زیارت نیابتی</a></li>
+						<li><a href="ahkame-azadari.html">احکام عزاداری</a></li>
+					</ul>
 
-			
+				</div>
 			</div>
+	</div>
 	<div id="controls_size">
 		<div id="css_style"></div>
 		<div id="controls_over"></div>
