--- a/www/hoseinie_01.html
+++ b/www/hoseinie_01.html
@@ -135,7 +135,7 @@
 <div class="justify doa_text">
 	کنار قدم های جابر، سوی نینوا رهسپاریم<br/>ستون های این جاده را ما، به شوق حرم می شماریم<br/>شبیه رباب و سکینه، برای شما بی قراریم<br/>ازین سختی و دوری راه، به شوق تو باکی نداریم<br/>فدایی زینب، پر از شور و عشقیم<br/>اگر که خدا خواست، بزودی دمشقیم<br/>لبیک یابن الحیدر<br/><br/>قَطَعنا الیک الصَّحاری، الا یا امیر الفرات<br/>أضِفنا فانّا ضیوفک، اضِف هؤلاء المُشاة<br/>نَسیرُ الیک نهاراً، و نَحلُمْ بک فی اللیالی<br/>نَعُدُّ الخُطىٰ و العلامات، و نبکیک حتى الوصال<br/>نسیل کَنهرٍ، یا بحر المَعالی<br/>بصَخرٍ و سدٍّ، اَبد لانُبالی<br/>لبیک یابن الحیدر<br/><br/>وُلِدنا على حبّ حیدر، إذن لانخاف المَخاطِر<br/>و نَفدیک بالقلب و الروح، و لیس فقط بالحناجر<br/>و الحمدلله صِرنا، بلطفک شعباً أبیّا<br/>سنمشی الى القدسِ یوماً، مع المسلمین سَویّا<br/>سلامٌ على الشام، کَرَمزِ الصُّمود<br/>و بحرین و القدس، اسیرِ القیود<br/>لبیک یابن الحیدر
 	<br/><br/><br/>
-<div>
+</div>
 					</div>
 				</div>
 		</div>
