--- a/www/news_in.html
+++ b/www/news_in.html
@@ -189,8 +189,10 @@ span.date_text {
 این مقام ارشد انتظامی در پاسخ به سؤال دیگر فارس در مورد تراکم جمعیت در مرزهای زمینی خاطرنشان کرد: مهران رتبه اول در عبور زائران را به خود اختصاص داده و شلمچه و چزابه در رده‌های بعدی تعداد و تردد زائران هستند.
 </p>
 					</div>
-			
+				</div>
+
 			</div>
+		</div>
 			<div id="controls_size">
 				<div id="css_style"></div>
 				<div id="controls_over"></div>
