--- a/www/shaerane.html
+++ b/www/shaerane.html
@@ -152,8 +152,11 @@
 					<li><a href="shaerane_07.html">قلم اینک به تمنای تو در رقص آمد</a></li>
 				</ul>
 
-			
 			</div>
+
+			</div>
+	</div>
+
 	<div id="controls_size">
 		<div id="css_style"></div>
 		<div id="controls_over"></div>
