--- a/www/ziyarat.html
+++ b/www/ziyarat.html
@@ -149,8 +149,9 @@
 					<li><a href="ziyarat-amir.html">زیارت امير المؤمنين عليه السّلام</a></li>
 				</ul>
 
-			
 			</div>
+			</div>
+	</div>
 	<div id="controls_size">
 		<div id="css_style"></div>
 		<div id="controls_over"></div>
