--- a/www/hoseinie_24.html
+++ b/www/hoseinie_24.html
@@ -173,10 +173,11 @@
 <br/>
 پیش چشم من ،می زدی دست و پا ،سوی خیمه بیا
 	<br/><br/><br/>
-<div>
+</div>
 					</div>
 				</div>
 		</div>
+
 		
 		
 		
