--- a/www/momenane.html
+++ b/www/momenane.html
@@ -108,6 +108,7 @@ ul.big_list li {
   padding-right: 45px;
   width: 200%;
   list-style:none;
+  direction:rtl;
 }
 ul.big_list {
     overflow: hidden;
