--- a/www/hoseinie.html
+++ b/www/hoseinie.html
@@ -373,30 +373,30 @@ ul.big_list li.need_download {
 							<li class="play_it " online="http://dlsmgroup.ir/jazebe_huseini/audio/huseiniye/36.mp3" play_type="offline" >مرده بدم زنده شدم</li>
 							<li class="play_it " online="http://dlsmgroup.ir/jazebe_huseini/audio/huseiniye/37.mp3" play_type="offline" >میزند خواهر تو بوسه بر حنجر</li>
 							
-							<li><a href="hoseinie_01.html">کنار قدمهای جابر سوی نینوا رهسپاریم</a></li>
-							<li><a href="hoseinie_02.html">الأربعینُ مَوْعدی</a></li>
-							<li><a href="hoseinie_03.html">کربلا ای خاک اندوه و بلا</a></li>
-							<li><a href="hoseinie_04.html">بگذرم از جان در راه جانان</a></li>
-							<li><a href="hoseinie_05.html">ای امام بصیرت کشته جهل امت</a></li>
-							<li><a href="hoseinie_06.html">خلیل ‌آسا به همت بت شکستم</a></li>
-							<li><a href="hoseinie_07.html">علمدار تو یاور ثاراللهی</a></li>
-							<li><a href="hoseinie_08.html">یابنی قتلوک</a></li>
-							<li><a href="hoseinie_09.html">انا علی ابنُ ذبیح کربلا</a></li>
-							<li><a href="hoseinie_10.html">لحظه‌ها شد در اسارت لیلة‌الاسرای تو</a></li>
-							<li><a href="hoseinie_11.html">حسین جان کفنت کو</a></li>
-							<li><a href="hoseinie_12.html">چه زینبی که صبر ز صبر او خجل</a></li>
-							<li><a href="hoseinie_13.html">شدم در پی‌ات دیده گریان</a></li>
-							<li><a href="hoseinie_14.html">قرآن شنیدن داره از لبای مقدست</a></li>
-							<li><a href="hoseinie_15.html">خوشا آنانکه دائم با تو بودند</a></li>
-							<li><a href="hoseinie_16.html">یاد امام و شهدا</a></li>
-							<li><a href="hoseinie_17.html">من غروب سرخت را زیبا دیدم</a></li>
-							<li><a href="hoseinie_18.html">درمیدان میمانم تانفس آخرم</a></li>
-							<li><a href="hoseinie_19.html">سید و مولا حسین</a></li>
-							<li><a href="hoseinie_20.html">منو این همه غم ارباب ارباب</a></li>
-							<li><a href="hoseinie_21.html">زائر کوی حسین</a></li>
-							<li><a href="hoseinie_22.html">کربلا ای بهشت محبین اهل‌بیت</a></li>
-							<li><a href="hoseinie_23.html">ای امام شهیدان خمینی</a></li>
-							<li><a href="hoseinie_24.html">از خیمه برون چو رسول الله</a></li>
+							<li class="need_download"><a href="hoseinie_01.html">کنار قدمهای جابر سوی نینوا رهسپاریم</a></li>
+							<li class="need_download"><a href="hoseinie_02.html">الأربعینُ مَوْعدی</a></li>
+							<li class="need_download"><a href="hoseinie_03.html">کربلا ای خاک اندوه و بلا</a></li>
+							<li class="need_download"><a href="hoseinie_04.html">بگذرم از جان در راه جانان</a></li>
+							<li class="need_download"><a href="hoseinie_05.html">ای امام بصیرت کشته جهل امت</a></li>
+							<li class="need_download"><a href="hoseinie_06.html">خلیل ‌آسا به همت بت شکستم</a></li>
+							<li class="need_download"><a href="hoseinie_07.html">علمدار تو یاور ثاراللهی</a></li>
+							<li class="need_download"><a href="hoseinie_08.html">یابنی قتلوک</a></li>
+							<li class="need_download"><a href="hoseinie_09.html">انا علی ابنُ ذبیح کربلا</a></li>
+							<li class="need_download"><a href="hoseinie_10.html">لحظه‌ها شد در اسارت لیلة‌الاسرای تو</a></li>
+							<li class="need_download"><a href="hoseinie_11.html">حسین جان کفنت کو</a></li>
+							<li class="need_download"><a href="hoseinie_12.html">چه زینبی که صبر ز صبر او خجل</a></li>
+							<li class="need_download"><a href="hoseinie_13.html">شدم در پی‌ات دیده گریان</a></li>
+							<li class="need_download"><a href="hoseinie_14.html">قرآن شنیدن داره از لبای مقدست</a></li>
+							<li class="need_download"><a href="hoseinie_15.html">خوشا آنانکه دائم با تو بودند</a></li>
+							<li class="need_download"><a href="hoseinie_16.html">یاد امام و شهدا</a></li>
+							<li class="need_download"><a href="hoseinie_17.html">من غروب سرخت را زیبا دیدم</a></li>
+							<li class="need_download"><a href="hoseinie_18.html">درمیدان میمانم تانفس آخرم</a></li>
+							<li class="need_download"><a href="hoseinie_19.html">سید و مولا حسین</a></li>
+							<li class="need_download"><a href="hoseinie_20.html">منو این همه غم ارباب ارباب</a></li>
+							<li class="need_download"><a href="hoseinie_21.html">زائر کوی حسین</a></li>
+							<li class="need_download"><a href="hoseinie_22.html">کربلا ای بهشت محبین اهل‌بیت</a></li>
+							<li class="need_download"><a href="hoseinie_23.html">ای امام شهیدان خمینی</a></li>
+							<li class="need_download"><a href="hoseinie_24.html">از خیمه برون چو رسول الله</a></li>
 						</ul>
 
 					</div>
