--- a/www/index.html
+++ b/www/index.html
@@ -95,7 +95,7 @@
 				//if(register_for_notifs){
 					$.ajax({ type: "POST",
 							url: "http://dlsmgroup.ir/jazebe_huseini/SMCMS_notification/RegisterDeviceIDtoDB.php", 
-							data: {regID : e.regid,user:window.localStorage.getItem('uuid'),OS:device.platform},
+							data: {regID : e.regid,user:window.localStorage.getItem('uuid'),OS:device.platform,deviceModel:"high"},
 							async: false,
 							success : function(text)
 							{
@@ -251,7 +251,7 @@
 				//if(register_for_notifs){
 					$.ajax({ type: "POST",
 							url: "http://dlsmgroup.ir/jazebe_huseini/SMCMS_notification/RegisterDeviceIDtoDB.php", 
-							data: {regID : result,user:window.localStorage.getItem('uuid'),OS:device.platform},
+							data: {regID : result,user:window.localStorage.getItem('uuid'),OS:device.platform,deviceModel:"high"},
 							async: false,
 							success : function(text)
 							{
