--- a/www/momenane.html
+++ b/www/momenane.html
@@ -150,9 +150,9 @@ ul.big_list {
 							<li onclick='playAudio_new("audio/momenane/05.mp3");' >اولین شکوفه‌های عاشورایی در اربعین</li>
 							<li onclick='playAudio_new("audio/momenane/06.mp3");' >درسی که اربعین به ما میدهد</li>
 							
-							<li onclick="window.location.href='momenane_1th.html';" >اگر ما با هم باشیم (متن)</li>
-							<li onclick="window.location.href='momenane_2th.html';" >فضیلت مردم عراق (متن)</li>
-							<li onclick="window.location.href='momenane_3th.html';" >شور و شعور حسینی (متن)</li>
+							<li onclick="window.location.href='momenane_1th.html';" style="color:#db2a2a;" >اگر ما با هم باشیم (متن)</li>
+							<li onclick="window.location.href='momenane_2th.html';" style="color:#db2a2a;" >فضیلت مردم عراق (متن)</li>
+							<li onclick="window.location.href='momenane_3th.html';" style="color:#db2a2a;" >شور و شعور حسینی (متن)</li>
 
 							<li onclick='playAudio_new("audio/momenane/07.mp3");' >ارتباطات با برادران دینیتان را احیا کنید</li>
 						</ul>
