--- a/www/roze.html
+++ b/www/roze.html
@@ -61,7 +61,7 @@
 			temp_element = $(this);
 			//alert($(this).attr('online'));
 			
-			//play_or_download('http://dlsmgroup.ir/jazebe_huseini/audio/roze/02.mp3','mp3');
+			//play_or_download('http://khamenei.mobi/app/jh/ios/audio/roze/02.mp3','mp3');
 			play_or_download($(this).attr('online'),"mp3");
 		});
 		
@@ -356,15 +356,15 @@ ul.big_list li.need_download {
 				<div id="container">
 					<div id="main" class="">
 						<ul class="big_list">
-							<li class="play_it " online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/01.mp3" play_type="offline" >گفتگوی امام و عمر سعد</li>
-							<li class="play_it " online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/02.mp3" play_type="offline" >گفتگوی امام و حضرت زینب سلام الله علیها</li>
-							<li class="play_it " online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/03.mp3" play_type="offline" >شهادت غلام امام حسین علیه السلام</li>
-							<li class="play_it " online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/04.mp3" play_type="offline" >شهادت عبدالله بن الحسن علیه السلام</li>
-							<li class="play_it " online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/05.mp3" play_type="offline" >شهادت قاسم ابن‌الحسن علیه السلام</li>
-							<li class="play_it " online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/06.mp3" play_type="offline" >شهادت حضرت علی‌اصغر علیه السلام</li>
-							<li class="play_it " online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/07.mp3" play_type="offline" >شهادت حضرت علی‌‌اکبر علیه السلام</li>
-							<li class="play_it " online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/08.mp3" play_type="offline" >شهادت حضرت عباس علیه السلام</li>
-							<li class="play_it " online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/09.mp3" play_type="offline" >عصر عاشورا</li>
+							<li class="play_it " online="http://khamenei.mobi/app/jh/ios/audio/roze/01.mp3" play_type="offline" >گفتگوی امام و عمر سعد</li>
+							<li class="play_it " online="http://khamenei.mobi/app/jh/ios/audio/roze/02.mp3" play_type="offline" >گفتگوی امام و حضرت زینب سلام الله علیها</li>
+							<li class="play_it " online="http://khamenei.mobi/app/jh/ios/audio/roze/03.mp3" play_type="offline" >شهادت غلام امام حسین علیه السلام</li>
+							<li class="play_it " online="http://khamenei.mobi/app/jh/ios/audio/roze/04.mp3" play_type="offline" >شهادت عبدالله بن الحسن علیه السلام</li>
+							<li class="play_it " online="http://khamenei.mobi/app/jh/ios/audio/roze/05.mp3" play_type="offline" >شهادت قاسم ابن‌الحسن علیه السلام</li>
+							<li class="play_it " online="http://khamenei.mobi/app/jh/ios/audio/roze/06.mp3" play_type="offline" >شهادت حضرت علی‌اصغر علیه السلام</li>
+							<li class="play_it " online="http://khamenei.mobi/app/jh/ios/audio/roze/07.mp3" play_type="offline" >شهادت حضرت علی‌‌اکبر علیه السلام</li>
+							<li class="play_it " online="http://khamenei.mobi/app/jh/ios/audio/roze/08.mp3" play_type="offline" >شهادت حضرت عباس علیه السلام</li>
+							<li class="play_it " online="http://khamenei.mobi/app/jh/ios/audio/roze/09.mp3" play_type="offline" >عصر عاشورا</li>
 						</ul>
 
 					</div>
