--- a/www/map_iraq.html
+++ b/www/map_iraq.html
@@ -97,9 +97,16 @@
 		if(buttonIndex==1)
 		{//send
 			//alert("sms:?body=" + my_location_marker.getLatLng());
+			//sms:+19725551212?body=hello	android
 			if(my_location_marker.getLatLng().lat != 36.2879)
 			{
-				window.location.href = "sms:&body=" + my_location_marker.getLatLng();
+				if ( device.platform == 'Android' ){//Android,iOS,win7=WinCE,win8=Win32NT
+					window.location.href = "sms:?body=" + my_location_marker.getLatLng();
+				}
+				else
+				{
+					window.location.href = "sms:&body=" + my_location_marker.getLatLng();
+				}
 			}
 			else
 			{
