--- a/www/hoseinie_03.html
+++ b/www/hoseinie_03.html
@@ -416,8 +416,16 @@
 			pausePos = slider_Timer.val();
 			formatTime(pausePos,audio_Timer);
 			pauseAudio();
-		});
-		
+			formatTime(pausePos,audio_Timer);
+			audio.seekTo(pausePos*1000);
+			
+			setTimeout(function(){
+				pausePos = temp_pausePos;
+				audio.seekTo(pausePos*1000);
+				formatTime(pausePos,audio_Timer);
+				slider_Timer.val(pausePos);
+			}, 800);
+		});		
 		pause_btn.click(function(){	
 			play2_btn.css("display","block");
 			pause_btn.css("display","none");
