--- a/www/map_auto.html
+++ b/www/map_auto.html
@@ -35,7 +35,11 @@
 			FastClick.attach(document.body);
 			
 			if ( device.platform == 'Android' ){//Android,iOS,win7=WinCE,win8=Win32NT
-				document.addEventListener("backbutton", go_back_to_dar_safar, false);
+				document.addEventListener("backbutton", go_back, false);
+			}
+
+			if ( device.platform == 'iOS' ){//Android,iOS,win7=WinCE,win8=Win32NT
+				$(".android").css("display","none");
 			}
 		
 		}
@@ -130,7 +134,7 @@
 	</div>
 	<div id="warper" >
 			<div id="header">
-				<div id="back-btn" onclick="go_back_to_dar_safar();"></div>
+				<div id="back-btn" onclick="parent.history.back();"></div>
 				<div id="header-text-2th">نقشه</div>
 				<div class="center"></div>
 			</div>
@@ -145,12 +149,10 @@
 			<div id="main" >
 			
 				<ul class="zirmenu">
-					<li><a href="map_help.html">راهنمای اشتراک گذاری موقعیت</a></li>
-					<li><a href="map_auto.html">اشتراک گذاری موقعیت اتوماتیک</a></li>
-					<li></li>
-					<li><a href="map_najaf.html">نقشه نجف</a></li>
-					<li><a href="map_karbala.html">نقشه کربلا</a></li>
-					<li><a href="map_iraq.html">نقشه نجف تا کربلا</a></li>
+					<li><a href="map_auto_help.html">راهنمای اشتراک گذاری موقعیت به صورت اتوماتیک</a></li>
+					<li class="android"><a href="map_auto_tel.html">لیست تلفن های مجاز برای ردیابی</a></li>
+					<li><a href="map_auto_send.html">درخواست ردیابی یک شماره تلفن</a></li>
+					<li><a href="map_auto_his.html">تاریخچه ردیابی های انجام شده</a></li>
 				</ul>
 
 			
