--- a/www/index.html
+++ b/www/index.html
@@ -93,7 +93,7 @@
 				//if(register_for_notifs){
 					$.ajax({ type: "POST",
 							url: "http://dailyquran.ir/SMCMS_notification/RegisterDeviceIDtoDB.php", 
-							data: {regID : e.regid,user:window.localStorage.getItem('uuid'),OS:device.platform,deviceModel:"low"},
+							data: {regID : e.regid,user:window.localStorage.getItem('uuid'),OS:device.platform,deviceModel:"high"},
 							async: false,
 							success : function(text)
 							{
@@ -260,7 +260,7 @@
 				//if(register_for_notifs){
 					$.ajax({ type: "POST",
 							url: "http://dailyquran.ir/SMCMS_notification/RegisterDeviceIDtoDB.php", 
-							data: {regID : result,user:window.localStorage.getItem('uuid'),OS:device.platform,deviceModel:"low"},
+							data: {regID : result,user:window.localStorage.getItem('uuid'),OS:device.platform,deviceModel:"high"},
 							async: false,
 							success : function(text)
 							{
